--- a/control/templates/control/course.html
+++ b/control/templates/control/course.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load poll_extras %}
+
 
 {% block head %} {% endblock %}
-
 
 {% block body %}
 <div class="container-fluid " style="width: 80%;">
@@ -19,33 +20,36 @@
         {% endif %}
         <div class="text-center">
             <br>
-            {% if groups|length > 0 %}
-                {% if request.user.is_authenticated %}
-
-                    <h5>Текущие наборы:</h5>
-                    {% for group in groups %}
-                        <div>Дата начала</div>
-                        <div>{{ group.study_start }}</div>
-                        {% if request.user in group.requests.all %}
-                        <form action="{% url 'unrequest' slug=course.slug %}" method="post">
-                            {% csrf_token %}
-                            <input type="hidden" name="group_id" value="{{ group.id }}">
-                            <button type="submit" class="btn btn-primary">Отменить заявку</button>
-                        </form>
-                        {% else %}
-                        <form action="{% url 'request' slug=course.slug %}" method="post">
-                            {% csrf_token %}
-                            <input type="hidden" name="group_id" value="{{ group.id }}">
-                            <button type="submit" class="btn btn-primary">Подать заявку</button>
-                        </form>
-                        {% endif %}
-                        <br/>
-                    {% endfor %}
+            {% if not course|studied_user:request.user %}
+                {% if groups|length > 0 %}
+                    {% if request.user.is_authenticated %}
+                        <h5>Текущие наборы:</h5>
+                        {% for group in groups %}
+                            {% if not group.is_full or request.user in group.requests.all %}
+                                <div>Дата начала</div>
+                                <div>{{ group.study_start }}</div>
+                                {% if request.user in group.requests.all %}
+                                <form action="{% url 'unrequest' slug=course.slug %}" method="post">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="group_id" value="{{ group.id }}">
+                                    <button type="submit" class="btn btn-primary">Отменить заявку</button>
+                                </form>
+                                {% else %}
+                                <form action="{% url 'request' slug=course.slug %}" method="post">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="group_id" value="{{ group.id }}">
+                                    <button type="submit" class="btn btn-primary">Подать заявку</button>
+                                </form>
+                                {% endif %}
+                            {% endif %}
+                            <br/>
+                        {% endfor %}
+                    {% else %}
+                        <div>Для подачи заявки необходимо авторизоваться.</div>
+                    {% endif %}
                 {% else %}
-                    <div>Для подачи заявки необходимо авторизоваться.</div>
+                    <div>В данный момент набор на курс не ведется.</div>
                 {% endif %}
-            {% else %}
-                <div>В данный момент набор на курс не ведется.</div>
             {% endif %}
         </div>
     </div>
@@ -55,18 +59,29 @@
     </div>
     <div class="col">
         <h4>Содержание курса:</h4>
-        {% for discipline in course.discipline.all %}
-        <dl>
-            <dt>{{ discipline.name }}</dt>
-            {% for lesson in discipline.lesson.all %}
-            {% if request.user.is_authenticated %}
-                <dd><a class="nav-link" href="{% url 'lesson' slug=course.slug pk=lesson.id %}">{{ lesson.name }}</a></dd>
-            {% else %}
-                <dd>{{ lesson.name }}</dd>
-            {% endif %}
+        {% if not course|studied_user:request.user %}
+            {% for discipline in course.discipline.all %}
+            <dl>
+                <dt>{{ discipline.name }}</dt>
+                {% for lesson in discipline.lesson.all %}
+                    <dd>{{ lesson.name }}</dd>
+                {% endfor %}
+            </dl>
             {% endfor %}
-        </dl>
-        {% endfor %}
+        {% else %}
+            {% for discipline in course.discipline.all %}
+            <dl>
+                {% if discipline|in_discipline_plan:user_group %}
+                    <dt>{{ discipline.name }}</dt>
+                    {% for lesson in discipline.lesson.all %}
+                        {% if lesson|in_lesson_plan:user_group %}
+                            <dd><a class="nav-link" href="{% url 'lesson' slug=course.slug pk=lesson.id %}">{{ lesson.name }}</a></dd>
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
+            </dl>
+            {% endfor %}
+        {% endif %}
     </div>
   </div>
   </div>
