--- a/control/templates/control/settings/courses.html
+++ b/control/templates/control/settings/courses.html
@@ -6,44 +6,59 @@
 {% block tab-content %}
     <h3>Курсы</h3>
     <div>
-      <br/>
-      <div class="text-right"><td><a href="{% url 'course_add' %}" class="btn btn-primary">Создать</a></td></div>
+      {% if request.user.is_superuser %}
+        <br/>
+        <div class="text-right"><td><a href="{% url 'course_add' %}" class="btn btn-primary">Создать</a></td></div>
+      {% endif %}
       <br/>
       <table id="table" class="table table-striped table-bordered sortable">
         <thead>
           <tr>
-            <th class="th-sm">Наименование курса</th>
-            <th class="th-sm">Ответственный</th>
-            <th class="th-sm">Дисциплины</th>
-            <th class="th-sm">Группы</th>
-            <th class="th-sm">Редактировать курс</th>
-            <th class="th-sm">Удалить курс</th>
+            <th class="th-sm text-center">Наименование курса</th>
+            <th class="th-sm text-center">Ответственный</th>
+            <th class="th-sm text-center">Дисциплины</th>
+            <th class="th-sm text-center">Группы</th>
+            {% if request.user.is_superuser %}
+              <th class="th-sm text-center">Редактировать курс</th>
+              <th class="th-sm text-center">Удалить курс</th>
+            {% endif %}
           </tr>
         </thead>
         <tbody>
         {% for course in courses %}
           <tr>
-            <td>{{ course.name }}</td>
-            <td>{{ course.owner.last_name }} {{ course.owner.first_name }} {{ course.owner.profile.patronymic }}</td>
-            <td></td>
-            <td>{% for group in course.group.all %} {{ group.name }}&nbsp; {% endfor %}</td>
-            <td><a href="{% url 'course_edit' slug=course.slug %}">Редактировать</a></td>
-            <td>
+            <td class="text-center">{{ course.name }}</td>
+            <td class="text-center">{{ course.owner.last_name }} {{ course.owner.first_name }} {{ course.owner.profile.patronymic }}</td>
+            <td class="text-center">
+              <dl>
+              {% for discipline in course.discipline.all %}
+                <div>{{ discipline.name }}</div>
+              {% endfor %}
+              </dl>
+            </td>
+            <td class="text-center">{% for group in course.group.all %}<div>{{ group.name }}</div>{% endfor %}</td>
+            {% if request.user.is_superuser %}
+            <td class="text-center"><a class="btn btn-primary" href="{% url 'course_edit' slug=course.slug %}">Редактировать</a></td>
+            <td class="text-center">
               <form action="{% url 'course_edit' slug=course.slug %}" method="post">
                   {% csrf_token %}
                   <button class="btn btn-danger" type="submit" href="">Удалить</button>
               </form>
+            </td>
+            {% endif %}
           </tr>
         {% endfor %}
         </tbody>
         <tfoot>
           <tr>
-            <th class="th-sm">Наименование курса</th>
-            <th class="th-sm">Ответственный</th>
-            <th class="th-sm">Дисциплины</th>
-            <th class="th-sm">Группы</th>
-            <th class="th-sm">Редактировать курс</th>
-            <th class="th-sm">Удалить курс</th>
+            <th class="th-sm text-center">Наименование курса</th>
+            <th class="th-sm text-center">Ответственный</th>
+            <th class="th-sm text-center">Дисциплины</th>
+            <th class="th-sm text-center">Группы</th>
+            {% if request.user.is_superuser %}
+              <th class="th-sm text-center">Редактировать курс</th>
+              <th class="th-sm text-center">Удалить курс</th>
+            {% endif %}
           </tr>
         </tfoot>
       </table>
