--- a/control/templates/control/settings/directions.html
+++ b/control/templates/control/settings/directions.html
@@ -4,37 +4,46 @@
 {% load crispy_forms_tags %}
 
 {% block tab-content %}
-    <h3>Напрвления</h3>
+    <h3>Направления обучения</h3>
     <div>
-      <br/>
-      <div class="text-right"><td><a href="{% url 'direction_add' %}" class="btn btn-primary">Создать</a></td></div>
+      {% if request.user.is_superuser %}
+        <br/>
+        <div class="text-right"><td><a href="{% url 'direction_add' %}" class="btn btn-primary">Создать</a></td></div>
+      {% endif %}
       <br/>
       <table id="table" class="table table-striped table-bordered sortable">
         <thead>
           <tr>
-            <th class="th-sm">Направление</th>
-            <th class="th-sm">Редактировать </th>
-            <th class="th-sm">Удалить</th>
+            <th class="th-sm text-center">Направление</th>
+            {% if request.user.is_superuser %}
+              <th class="th-sm text-center">Редактировать </th>
+              <th class="th-sm text-center">Удалить</th>
+            {% endif %}
           </tr>
         </thead>
         <tbody>
         {% for direction in directions %}
           <tr>
-            <td>{{ direction.name }}</td>
-            <td><a href="{% url 'direction_edit' pk=direction.pk %}">Редактировать</a></td>
-            <td>
+            <td class="text-center">{{ direction.name }}</td>
+            {% if request.user.is_superuser %}
+            <td class="text-center"><a class="btn btn-primary" href="{% url 'direction_edit' pk=direction.pk %}">Редактировать</a></td>
+            <td class="text-center">
               <form action="{% url 'direction_del' pk=direction.pk %}" method="post">
                   {% csrf_token %}
                   <button class="btn btn-danger" type="submit" href="">Удалить</button>
               </form>
+            </td>
+            {% endif %}
           </tr>
         {% endfor %}
         </tbody>
         <tfoot>
           <tr>
-            <th class="th-sm">Направление</th>
-            <th class="th-sm">Редактировать </th>
-            <th class="th-sm">Удалить</th>
+            <th class="th-sm text-center">Направление</th>
+            {% if request.user.is_superuser %}
+              <th class="th-sm text-center">Редактировать </th>
+              <th class="th-sm text-center">Удалить</th>
+            {% endif %}
           </tr>
         </tfoot>
       </table>
