--- a/control/templates/control/settings/disciplines.html
+++ b/control/templates/control/settings/disciplines.html
@@ -1,46 +1,58 @@
 {% extends 'control/settings/base_settings.html' %}
 {% load static %}
-
+{% load poll_extras %}
 {% load crispy_forms_tags %}
 
 {% block tab-content %}
     <h3>Дисциплины</h3>
     <div>
+      {% if request.user.is_superuser or owner %}
       <br/>
       <div class="text-right"><td><a href="{% url 'discipline_add' %}" class="btn btn-primary">Создать</a></td></div>
+      {% endif %}
       <br/>
       <table id="table" class="table table-striped table-bordered sortable">
         <thead>
           <tr>
-            <th class="th-sm">Наименование дисциплины</th>
-            <th class="th-sm">Наименование курса</th>
-            <th class="th-sm">Преподаватель</th>
-            <th class="th-sm">Редактировать</th>
-            <th class="th-sm">Удалить дисциплину</th>
+            <th class="th-sm text-center">Наименование дисциплины</th>
+            <th class="th-sm text-center">Наименование курса</th>
+            <th class="th-sm text-center">Преподаватель</th>
+            {% if request.user.is_superuser or owner %}
+              <th class="th-sm text-center">Редактировать</th>
+              <th class="th-sm text-center">Удалить дисциплину</th>
+            {% endif %}
           </tr>
         </thead>
         <tbody>
         {% for discipline in disciplines %}
           <tr>
-            <td>{{ discipline.name }}</td>
-            <td>{{ discipline.course }}</td>
-            <td>{{ discipline.teacher.last_name }} {{ discipline.teacher.first_name }} {{ discipline.teacher.profile.patronymic }}</td>
-            <td><a href="{% url 'discipline_edit' pk=discipline.pk %}">Редактировать</a></td>
-            <td>
-              <form action="{% url 'discipline_edit' pk=discipline.pk %}" method="post">
-                  {% csrf_token %}
-                  <button class="btn btn-danger" type="submit" href="">Удалить</button>
-              </form>
+            <td class="text-center">{{ discipline.name }}</td>
+            <td class="text-center">{{ discipline.course }}</td>
+            <td class="text-center">{{ discipline.teacher.last_name }} {{ discipline.teacher.first_name }} {{ discipline.teacher.profile.patronymic }}</td>
+            {% if request.user.is_superuser or discipline.course|is_owner:request.user %}
+            <td class="text-center"><a class="btn btn-primary" href="{% url 'discipline_edit' pk=discipline.pk %}">Редактировать</a></td>
+              <td class="text-center">
+                <form action="{% url 'discipline_edit' pk=discipline.pk %}" method="post">
+                    {% csrf_token %}
+                    <button class="btn btn-danger" type="submit" href="">Удалить</button>
+                </form>
+              </td>
+            {% else %}
+            <td></td>
+            <td></td>
+            {% endif %}
           </tr>
         {% endfor %}
         </tbody>
         <tfoot>
           <tr>
-            <th class="th-sm">Наименование дисциплины</th>
-            <th class="th-sm">Наименование курса</th>
-            <th class="th-sm">Преподаватель</th>
-            <th class="th-sm">Редактировать</th>
-            <th class="th-sm">Удалить дисциплину</th>
+            <th class="th-sm text-center">Наименование дисциплины</th>
+            <th class="th-sm text-center">Наименование курса</th>
+            <th class="th-sm text-center">Преподаватель</th>
+            {% if request.user.is_superuser or owner %}
+              <th class="th-sm text-center">Редактировать</th>
+              <th class="th-sm text-center">Удалить дисциплину</th>
+            {% endif %}
           </tr>
         </tfoot>
       </table>
