--- a/control/templates/control/settings/edit/test_edit.html
+++ b/control/templates/control/settings/edit/test_edit.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'control/settings/base_settings.html' %}
 {% load static %}
 {% load poll_extras %}
 {% load crispy_forms_tags %}
 
-{% block head %}
+{% block shead %}
   {{ form.media }}
 {% endblock %}
 
@@ -13,7 +13,7 @@
   <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
     <div class="row">
-      <div class="col col-lg-3"><a href="{% url 'settings_tests' %}" class="btn btn-primary">Назад</a></div>
+      <div class="col col-lg-6"><a href="{% url 'settings_tests' %}" class="btn btn-primary">Назад</a></div>
       {% if test %}
       <div class="col col-lg-6 text-right"><button type="submit" value="Update" class="btn btn-primary">Сохранить</button></div>
       {% else %}
@@ -22,101 +22,61 @@
     </div>
   <br/>
   <div class="row">
-    <div class="col col-2">
-        {{ form.lesson|as_crispy_field }}
-    </div>
-    <div class="col-6">
-        <div class="row">
-            <div class="col-8">
-                {{ form.name|as_crispy_field }}
-                <div class="row">
-                    <div class="col-6">
-                        {{ form.tryes|as_crispy_field }}
-                    </div>
-                    <div class="col-6">
-                        {{ form.pass_percent|as_crispy_field }}
-                    </div>
-                </div>
-            </div>
-            <div class="col-4">
-                {{ form.time|as_crispy_field }}
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                {% if test %}
-                    {% if questions|length > 0 %}
-                        <div class="row">
-                            <div class="col-6">
-                                <h4>Вопрос</h4>
-                            </div>
-                            <div class="col-4">
-                                <h4>Верный</h4>
-                            </div>
-                            <div class="col-2">
-                                <h4>Удалить</h4>
-                            </div>
-                        </div>
-                        <br>
-                        {% for question in questions %}
-                        <div class="row">
-                            <div class="col-6">
-                                {{ question.text|striptags|safe }}
-                            </div>
-                            <div class="col-4">
-                                {% for answer in question.answer.all %}
-                                    {% if answer.correct == True %}
-                                        <p class="text-success">{{ forloop.counter }}) {{ answer.text }}</p>
-                                    {% else %}
-                                        <p> {{ forloop.counter }}) {{ answer.text }}</p>
-                                    {% endif %}
-                                {% endfor %}
-                            </div>
-                            <div class="col-2">
-                                <form action="{% url 'question_del' pk=test.id %}" method="post">
-                                    <input hidden name="pkq" value="{{ question.pk }}">
-                                    {% csrf_token %}
-                                    <button class="btn btn-danger" type="submit" href="">Удалить</button>
-                                </form>
-                            </div>
-                        </div>
-                        <br>
-                    {% endfor %}
-                    {% else %}
-                        <div class="row">
-                            <div class="col-6">
-                                Вопросы отсутствуют
-                            </div>
-                            <div class="col-4">
-
-                            </div>
-                            <div class="col-2">
-                                <a href="{% url 'question_add' %}" class="btn btn-primary">Создать вопрос</a>
-                            </div>
-                        </div>
-                    {% endif %}
-                    <div class="row">
-                            <div class="col-4">
-
-                            </div>
-                            <div class="col-4">
-
-                            </div>
-                            <div class="col-4">
-                                <a href="{% url 'question_add' %}" class="btn btn-primary">Создать вопрос</a>
-                            </div>
-                        </div>
-                {% endif %}
-            </div>
-        </div>
-    </div>
-      <div class="col">
-
+      <div class="col-6">
+          {{ form.name|as_crispy_field }}
+      </div>
+      <div class="col-6">
+          {{ form.lesson|as_crispy_field }}
       </div>
   </div>
+     <div class="row">
+         <div class="col-4">
+             {{ form.tryes|as_crispy_field }}
+         </div>
+         <div class="col-4">
+             {{ form.pass_percent|as_crispy_field }}
+         </div>
+         <div class="col-4">
+             {{ form.time|as_crispy_field }}
+         </div>
+     </div>
+     {% if test %}
+         <table class="table table-striped table-bordered ">
+             <thead>
+             <tr>
+                 <th class="th-sm">Текст</th>
+                 <th class="th-sm">Ответы</th>
+                 <th class="th-sm">Редактировать</th>
+                 <th class="th-sm">Удалить</th>
+             </tr>
+             </thead>
+             <tbody>
+             {% for question in test.question.all %}
+             <tr>
+                 <td>{{ question.text|safe }}</td>
+                 <td>
+                     {% for answer in question.answer.all %}
+                     <div class="row">
+                         <div class="col {% if answer.correct %}text-success{% endif %}">{{ answer.text }}</div>
+                     </div>
+                     {% endfor %}
+                 </td>
+                 <td><a href="{% url 'question_edit' question.pk %}">Редактировать</a></td>
+                 <td><a href="{% url 'question_del' question.pk %}">Удалить</a></td>
+             </tr>
+             {% endfor %}
+             </tbody>
+             <tfoot>
+             <tr>
+                 <th class="th-sm">Текст</th>
+                 <th class="th-sm">Ответы</th>
+                 <th class="th-sm">Редактировать</th>
+                 <th class="th-sm">Удалить</th>
+             </tr>
+             </tfoot>
+         </table>
+         <a href="{% url 'question_add' test.pk %}" class="btn btn-primary">Создать вопрос</a>
+     {% endif %}
   </form>
 </div>
-<script>
-
-</script>
 {% endblock %}
