--- a/control/templates/control/settings/groups.html
+++ b/control/templates/control/settings/groups.html
@@ -1,6 +1,6 @@
 {% extends 'control/settings/base_settings.html' %}
 {% load static %}
-
+{% load poll_extras %}
 {% load crispy_forms_tags %}
 
 
@@ -13,51 +13,59 @@
       <table id="table" class="table table-striped table-bordered sortable ">
         <thead>
           <tr>
-            <th class="th-sm">Группа</th>
-            <th class="th-sm">Курс</th>
-            <th class="th-sm">Статус</th>
-            <th class="th-sm">Заявки</th>
-            <th class="th-sm">Учащиеся</th>
-            <th class="th-sm">Учебный план</th>
-            <th class="th-sm">Редактировать</th>
-            <th class="th-sm">Удалить группу</th>
+            <th class="th-sm text-center">Группа</th>
+            <th class="th-sm text-center">Курс</th>
+            <th class="th-sm text-center">Статус</th>
+            <th class="th-sm text-center">Статистика</th>
+            <th class="th-sm text-center">Заявки</th>
+            <th class="th-sm text-center">Учащиеся</th>
+            <th class="th-sm text-center">Учебный план</th>
+            {% if request.user.is_superuser or group.course|is_owner:request.user %}
+              <th class="th-sm text-center">Редактировать</th>
+              <th class="th-sm text-center">Удалить группу</th>
+            {% endif %}
           </tr>
         </thead>
         <tbody>
         {% for group in groups %}
           <tr>
-            <td>{{ group.name }}</td>
-            <td>{{ group.course }}</td>
-            <td>{{ group.get_status }}</td>
-            <td><a href="{% url 'requests_group' pk=group.pk %}">{{ group.requests.count }}</a></td>
-            <td><a href="{% url 'students_group' pk=group.pk %}">{{ group.students.count }}</a></td>
-            <td>
-              <form action="{% url 'group_test' %}" method="post">
-                  {% csrf_token %}
-                  <input hidden name="group_pk" value="{{ group.pk }}">
-                  <button class="btn btn-primary" type="submit" href="">Настроить</button>
-              </form>
-            </td>
-            <td><a href="{% url 'group_edit' pk=group.id %}">Редактировать</a></td>
-            <td>
-              <form action="{% url 'group_del' pk=group.pk %}" method="post">
-                  {% csrf_token %}
-                  <button class="btn btn-danger" type="submit" href="">Удалить </button>
-              </form>
-            </td>
+            <td class="text-center">{{ group.name }}</td>
+            <td class="text-center">{{ group.course }}</td>
+            <td class="text-center">{{ group.get_status }}</td>
+            <td class="text-center"><a class="btn btn-primary" href="{% url 'group_statistics' pk=group.id %}">Просмотреть</a></td>
+            {% if request.user.is_superuser or group.course|is_owner:request.user %}
+            <td class="text-center"><a href="{% url 'requests_group' pk=group.pk %}">{{ group.requests.count }}</a></td>
+            <td class="text-center"><a href="{% url 'students_group' pk=group.pk %}">{{ group.students.count }} из {{ group.max_users }}</a></td>
+            {% else %}
+            <td class="text-center">{{ group.requests.count }}</td>
+            <td class="text-center">{{ group.students.count }} из {{ group.max_users }}</td>
+            {% endif %}
+            <td class="text-center"><a class="btn btn-primary" href="{% url 'group_plan' pk=group.id %}">Настроить</a></td>
+            {% if request.user.is_superuser or group.course|is_owner:request.user %}
+              <td class="text-center"><a class="btn btn-primary" href="{% url 'group_edit' pk=group.id %}">Редактировать</a></td>
+              <td class="text-center">
+                <form action="{% url 'group_del' pk=group.pk %}" method="post">
+                    {% csrf_token %}
+                    <button class="btn btn-danger" type="submit" href="">Удалить </button>
+                </form>
+              </td>
+            {% endif %}
           </tr>
         {% endfor %}
         </tbody>
         <tfoot>
           <tr>
-            <th class="th-sm">Группа</th>
-            <th class="th-sm">Курс</th>
-            <th class="th-sm">Статус</th>
-            <th class="th-sm">Заявки</th>
-            <th class="th-sm">Учащиеся</th>
-            <th class="th-sm">Учебный план</th>
-            <th class="th-sm">Редактировать</th>
-            <th class="th-sm">Удалить группу</th>
+            <th class="th-sm text-center">Группа</th>
+            <th class="th-sm text-center">Курс</th>
+            <th class="th-sm text-center">Статус</th>
+            <th class="th-sm text-center">Статистика</th>
+            <th class="th-sm text-center">Заявки</th>
+            <th class="th-sm text-center">Учащиеся</th>
+            <th class="th-sm text-center">Учебный план</th>
+            {% if request.user.is_superuser or group.course|is_owner:request.user %}
+              <th class="th-sm text-center">Редактировать</th>
+              <th class="th-sm text-center">Удалить группу</th>
+            {% endif %}
           </tr>
         </tfoot>
       </table>
