--- a/control/templates/control/settings/lessons.html
+++ b/control/templates/control/settings/lessons.html
@@ -12,21 +12,21 @@
       <table id="table" class="table table-striped table-bordered sortable">
         <thead>
           <tr>
-            <th class="th-sm">Наименование занятия</th>
-            <th class="th-sm">Наименование дисциплины</th>
-            <th class="th-sm">Преподаватель</th>
-            <th class="th-sm">Редактировать</th>
-            <th class="th-sm">Удалить занятие</th>
+            <th class="th-sm text-center">Наименование занятия</th>
+            <th class="th-sm text-center">Наименование дисциплины</th>
+            <th class="th-sm text-center">Преподаватель</th>
+            <th class="th-sm text-center">Редактировать</th>
+            <th class="th-sm text-center">Удалить занятие</th>
           </tr>
         </thead>
         <tbody>
         {% for lesson in lessons %}
           <tr>
-            <td>{{ lesson.name }}</td>
-            <td>{{ lesson.discipline.name }}</td>
-            <td>{{ lesson.discipline.teacher.last_name }} {{ lesson.discipline.teacher.first_name }} {{ lesson.discipline.teacher.profile.patronymic }}</td>
-            <td><a href="{% url 'lesson_edit' pk=lesson.pk %}">Редактировать</a></td>
-            <td>
+            <td class="text-center">{{ lesson.name }}</td>
+            <td class="text-center">{{ lesson.discipline.name }}</td>
+            <td class="text-center">{{ lesson.discipline.teacher.last_name }} {{ lesson.discipline.teacher.first_name }} {{ lesson.discipline.teacher.profile.patronymic }}</td>
+            <td class="text-center"><a class="btn btn-primary" href="{% url 'lesson_edit' pk=lesson.pk %}">Редактировать</a></td>
+            <td class="text-center">
               <form action="{% url 'lesson_edit' pk=lesson.pk %}" method="post">
                   {% csrf_token %}
                   <button class="btn btn-danger" type="submit" href="">Удалить</button>
@@ -36,11 +36,11 @@
         </tbody>
         <tfoot>
           <tr>
-            <th class="th-sm">Наименование занятия</th>
-            <th class="th-sm">Наименование дисциплины</th>
-            <th class="th-sm">Преподаватель</th>
-            <th class="th-sm">Редактировать</th>
-            <th class="th-sm">Удалить занятие</th>
+            <th class="th-sm text-center">Наименование занятия</th>
+            <th class="th-sm text-center">Наименование дисциплины</th>
+            <th class="th-sm text-center">Преподаватель</th>
+            <th class="th-sm text-center">Редактировать</th>
+            <th class="th-sm text-center">Удалить занятие</th>
           </tr>
         </tfoot>
       </table>
