--- a/control/templates/control/settings/test_results.html
+++ b/control/templates/control/settings/test_results.html
@@ -7,7 +7,7 @@
     <h3>Результаты теста - "{{ test.name }}"</h3>
     <div>
       <br/>
-      <div><td><a href="{% url 'settings_tests' %}" class="btn btn-primary">Назад</a></td></div>
+      <div><a href="{% url 'settings_tests' %}" class="btn btn-primary">Назад</a></div>
       <br/>
       <table id="table" class="table table-striped table-bordered sortable">
         <thead>
@@ -34,6 +34,7 @@
                   <input hidden name="result" value="{{ result.id }}">
                   <button class="btn btn-danger" type="submit" href="">Удалить</button>
               </form>
+            </td>
           </tr>
         {% endfor %}
         </tbody>
