--- a/control/templates/control/settings/users.html
+++ b/control/templates/control/settings/users.html
@@ -12,23 +12,21 @@
       <table id="table" class="table table-striped table-bordered sortable">
         <thead>
           <tr>
-            <th class="th-sm">ФИО</th>
-            <th class="th-sm">Ученик</th>
-            <th class="th-sm">Последнее посещение</th>
-            <th class="th-sm">Текущие курсы</th>
-            <th class="th-sm">Редактировать профиль пользователя</th>
-            <th class="th-sm">Удалить пользователя</th>
+            <th class="th-sm text-center">ФИО</th>
+            <th class="th-sm text-center">Ученик</th>
+            <th class="th-sm text-center">Последнее посещение</th>
+            <th class="th-sm text-center">Редактировать профиль</th>
+            <th class="th-sm text-center">Удалить пользователя</th>
           </tr>
         </thead>
         <tbody>
         {% for user in users %}
           <tr>
-            <td>{{ user.last_name }} {{ user.first_name }} {{ user.profile.patronymic }}</td>
-            <td>{% if user.is_staff %} Нет {% else %} Да {% endif %}</td>
-            <td>{{ user.last_login }}</td>
-            <td>{% for group in user.group.all %}{{ group.course }} {% endfor %}</td>
-            <td><a href="{% url 'user_edit' pk=user.pk %}">Редактировать</a></td>
-            <td>
+            <td class="text-center">{{ user.last_name }} {{ user.first_name }} {{ user.profile.patronymic }}</td>
+            <td class="text-center">{% if user.is_staff %} Нет {% else %} Да {% endif %}</td>
+            <td class="text-center">{{ user.last_login }}</td>
+            <td class="text-center"><a class="btn btn-primary" href="{% url 'user_edit' pk=user.pk %}">Редактировать</a></td>
+            <td class="text-center">
               <form action="{% url 'user_del' pk=user.pk %}" method="post">
                   {% csrf_token %}
                   <button class="btn btn-danger" type="submit" href="">Удалить </button>
@@ -39,11 +37,11 @@
         </tbody>
         <tfoot>
           <tr>
-            <th class="th-sm">ФИО</th>
-            <th class="th-sm">Ученик</th>
-            <th class="th-sm">Последнее посещение</th>
-            <th class="th-sm">Текущие курсы</th>
-            <th class="th-sm">Редактировать</th>
+            <th class="th-sm text-center">ФИО</th>
+            <th class="th-sm text-center">Ученик</th>
+            <th class="th-sm text-center">Последнее посещение</th>
+            <th class="th-sm text-center">Редактировать профиль</th>
+            <th class="th-sm text-center">Удалить пользователя</th>
           </tr>
         </tfoot>
       </table>
